View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033066 | Community | OCCT:Visualization | public | 2022-07-15 15:43 | 2022-07-17 11:36 |
Reporter | Assigned To | kgv | |||
Priority | normal | Severity | trivial | ||
Status | verified | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2019 | ||
Product Version | 7.1.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0033066: Visualization - null pointer dereference in MeshVS_ElementalColorPrsBuilder::Build() function | ||||
Description | The initialization of the aSGroup variable in the MeshVS_ElementalColorPrsBuilder::Build() function is performed only if the value of the anEdgeOn variable is true, while this variable is accessed at the end of the function anyway, which leads to a crash of the program. A patch with a fix is attached. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
2022-07-15 15:43 reporter |
OCCT760.patch (541 bytes) |
|
Branch CR33066 has been created by kgv. SHA-1: 863e9e2188d7ac6474792380e209a12fbcc12703 Detailed log of new commits: Author: kgv Date: Fri Jul 15 16:06:02 2022 +0300 0033066: Visualization - null pointer dereference in MeshVS_ElementalColorPrsBuilder::Build() function Added missing Boolean flag check. |
|
Please raise the patch - OCCT: branch CR33066. |
|
Combination - OCCT branch : IR-2022-07-15 master SHA - changes and them, and you can discard any commits you make in this bbf49a300cb2815ace6e91c2d818851285245561 changes and them, and you can discard any commits you make in this e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-07-15 SHA - 57fd35c069f945882e62cea2570b267a622113a1 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18688.840000000597 / 18699.490000000584 [-0.06%] Products Total CPU difference: 11817.34000000012 / 11808.660000000125 [+0.07%] Windows-64-VC14: OCCT Total CPU difference: 20746.765625 / 20800.875 [-0.26%] Products Total CPU difference: 13355.28125 / 13373.65625 [-0.14%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33066 has been deleted by mnt. SHA-1: 863e9e2188d7ac6474792380e209a12fbcc12703 |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-07-15 15:43 |
|
New Issue | |
2022-07-15 15:43 |
|
Assigned To | => oan |
2022-07-15 15:43 |
|
File Added: OCCT760.patch | |
2022-07-15 15:55 | kgv | Assigned To | oan => kgv |
2022-07-15 15:55 | kgv | Category | OCCT:Mesh => OCCT:Visualization |
2022-07-15 15:55 | kgv | Target Version | => 7.7.0 |
2022-07-15 15:55 | kgv | Summary | Referencing by null pointer under certain conditions in MeshVS_ElementalColorPrsBuilder::Build() function => Visualization - null pointer dereference in MeshVS_ElementalColorPrsBuilder::Build() function |
2022-07-15 16:06 | git | Note Added: 0109831 | |
2022-07-15 16:07 | kgv | Assigned To | kgv => bugmaster |
2022-07-15 16:07 | kgv | Severity | crash => trivial |
2022-07-15 16:07 | kgv | Status | new => resolved |
2022-07-15 16:07 | kgv | Steps to Reproduce Updated | |
2022-07-15 16:07 | kgv | Test case number | => N/A |
2022-07-15 16:07 | kgv | Note Added: 0109832 | |
2022-07-15 16:08 | kgv | Status | resolved => reviewed |
2022-07-15 16:09 | kgv | Relationship added | child of 0027751 |
2022-07-15 16:09 | kgv | Product Version | 7.6.0 => 7.1.0 |
2022-07-16 00:40 | smoskvin | Status | reviewed => tested |
2022-07-16 00:40 | smoskvin | Note Added: 0109839 | |
2022-07-17 11:28 | smoskvin | Changeset attached | => occt master bbf49a30 |
2022-07-17 11:28 | kgv | Assigned To | bugmaster => kgv |
2022-07-17 11:28 | kgv | Status | tested => verified |
2022-07-17 11:28 | kgv | Resolution | open => fixed |
2022-07-17 11:36 | git | Note Added: 0109842 |