0033066: Visualization - null pointer dereference in MeshVS_ElementalColorPrsBuilder::Build() function

Added missing Boolean flag check.